# N

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml  config.toml
.codex/environments/: environment.toml
.opencode/skills/playwright-e2e/: SKILL.md
.opencode/skills/vitest-testing/: SKILL.md
.opencode/skills/vue-composition-api/: SKILL.md
docs/: api.md  architecture.md  scan-perf.md  shelf-search-optimization-spec.md
frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: real-progress.spec.js  shelf.spec.js
frontend/public/: manifest.webmanifest
frontend/src/: App.vue  AutoScroll.vue  FolderOverlay.vue  api.js  chinese.js  progress.js  reader.js  reader.test.js  search.js  styles.css
installer/: txt-reader.iss
scripts/: check.py  codex.py  dev.py  package_windows.py  progress_smoke.py  setup-local-https.ps1
src/: api.rs  app_error.rs  config.rs  db.rs  library.rs  main.rs  models.rs  tray.rs
