[package]
name = "txt-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
chardetng = "0.1"
encoding_rs = "0.8"
rustls = { version = "0.23.40", features = ["aws-lc-rs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
zhconv = "0.4.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.48", features = ["full"] }
toml = "0.9"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "windows")'.dependencies]
resvg = "0.44"
tray-icon = "0.22"
tiny-skia = "0.11"
usvg = "0.44"
winit = "0.30"
